[project]
name = "robot-sander"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.3",
    "open3d>=0.19.0",
    "pyglet<2",
    "pytest>=8.4.2",
    "pytorch-kinematics>=0.7.0",
    "ray>=2.49.2",
    "torch>=2.8.0",
    "xacrodoc>=1.3.0",
    "yourdfpy>=0.0.58",
]
